added landing page

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,14 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.hero_title {
+  width: 100%;
+  font-size: 3rem;
+}
+.hero_text {
+  width: 50%;
+  text-align: left;
+  font-size: 13px;
+  word-wrap: normal;
+}
